# 42_ft_nm

./: .gitignore  CMakeLists.txt  Makefile  Vagrantfile
.run/:  test.o.run.xml  libft_build.run.xml
libft/: Makefile  ft_atoi.c  ft_printf.c  ft_tolower.c  ft_toupper.c  libft.h
src/: handle_32.c  handle_64.c  main.c  nm.h  print.c  validation.c
test/: test_1.c  test_2.c  test_3.c
